--- a/assets/style.css
+++ b/assets/style.css
@@ -36,10 +36,12 @@ body {
     font-size: 100px;
     padding: 300px;
     margin: 300px;
-    background-image: url(../assets/images/jelly.jpg);
     background-size: contain;
     color: #a0c0de;
 }
+
+
+/* background image and sizing */
 
 section {
     display: flex;
@@ -49,4 +51,49 @@ section {
     justify-content: center;
     color: #96c7e8;
     font-size: 70px;
+}
+
+.abt {
+    font-size: 80px;
+    padding: 100px;
+    margin: 100px;
+    background-image: url(../assets/images/jelly.jpg);
+    background-size: contain;
+    color: #a0c0de;
+}
+
+.gh {
+    background-image: url(../assets/images/Screenshot\ 2022-06-20\ 205340.png);
+    font-size: 80px;
+    padding: 100px;
+    margin: 100px;
+    background-size: contain;
+    color: #a0c0de;
+}
+
+@media(max-width:1360px) {
+    header {
+        display: flex;
+    }
+    main {
+        display: flex;
+    }
+}
+
+@media(max-width:980px) {
+    header {
+        display: inline;
+    }
+    main {
+        display: inline;
+    }
+}
+
+@media(max-width:420px) {
+    header {
+        display: flex;
+    }
+    main {
+        display: inline;
+    }
 }
